objects/ALL_JSTree_Relationship__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Child_Create_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Child Create Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child_Description__c</fullName>
        <label>Child Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_FieldOrderSet__c</fullName>
        <label>Child FieldOrderSet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Fieldset__c</fullName>
        <label>Child Fieldset</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Object__c</fullName>
        <label>Child Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Relationship__c</fullName>
        <description>Field Name of the Relationship</description>
        <label>Child Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_To_Sort_Parent_Record__c</fullName>
        <label>Field To Sort Parent Record</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrandParent_Relationship_Field__c</fullName>
        <label>GrandParent Relationship Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandparent_Display_Field__c</fullName>
        <description>This field will contain the value of the Grandparent field API Name to be displayed as a picklist for selection by the User.</description>
        <label>Grandparent Display Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Create_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Create Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Description__c</fullName>
        <label>Parent Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_FieldOrderSet__c</fullName>
        <label>Parent FieldOrderSet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Fieldset__c</fullName>
        <label>Parent Fieldset</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <label>Parent Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Relationship_Field_Name__c</fullName>
        <label>Parent Relationship Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Requires_Children__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Requires Children</label>
        <type>Checkbox</type>
    </fields>
    <label>ALL JSTree Relationship</label>
</CustomObject>